Fixed bottom whitespace in admin zone

--- a/src/Containers/Admin/ProductDetails/ProductDetails.scss
+++ b/src/Containers/Admin/ProductDetails/ProductDetails.scss
@@ -11,7 +11,7 @@
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
         rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
       .productDetails {
-        min-width: 100%;
+        width: 100%;
         .productDetails-title {
           @include flex(row, center, center);
           .btn {
@@ -35,7 +35,7 @@
         max-width: 20rem;
         border: 1px solid $fourth;
         box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-          rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+          rgba(66, 94, 116, 0.15) 0px 1px 3px 1px;
       }
       .grid {
         display: grid;
@@ -70,8 +70,14 @@
             .grid {
               display: block;
               width: 100%;
+              > * {
+                padding-left: 0;
+              }
               input {
                 width: 100%;
+              }
+              :nth-child(18) {
+                word-break: break-all;
               }
             }
           }
